--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <a class="main-heading" href="#">Pensamiento Computacional</a>
                         <p>Es más que una habilidad para resolver problemas, en muchos contextos puede ser útil personal y profesionalmente, por ello es una aptitud necesaria de desarrollar para cualquier persona.
                         </p>    
-                        <a href="/HTML/pensamientoCompu.html" class="btn">read more <i class="fas fa-arrow-right"></i></a>
+                        <a href="pensamientoCompu.html" class="btn">read more <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
 
