--- a/pensamientoCompu.html
+++ b/pensamientoCompu.html
@@ -42,6 +42,13 @@
     </header>
 
     <section class="about" id="about">
+        <div class="content">
+            <h2 style="text-align:center;">Unidad 1</h2>
+
+        </div>
+    </section>
+
+    <section class="about" id="about">
         <br>
         <br>
         <br>
@@ -62,20 +69,41 @@
             </ul>
             <h3>Como se aplican a los sectores económicos</h3>
             <ul>
-                <li>Sector primario:</li> 
-                <p>En el sector primario estos elementos permiten analizar actividades y procesos fundamentales que se realizan en los sectores como lo es la ganadería, la agricultura, la tala de árboles, la pesca, entre otras. El definir objetivos, producción en masa o por empaques dependiendo de la actividad que se este realizando y debido a demanda de los clientes, referente a esto se identifican los limites, interacciones demas que se hacen en el proceso de recoleccón y asi identificar procesos que quiza se puedan optimizar.   </p><br>
+                <li>Sector primario:</li>
+                <p>En el sector primario estos elementos permiten analizar actividades y procesos fundamentales que se
+                    realizan en los sectores como lo es la ganadería, la agricultura, la tala de árboles, la pesca,
+                    entre otras. El definir objetivos, producción en masa o por empaques dependiendo de la actividad que
+                    se este realizando y debido a demanda de los clientes, referente a esto se identifican los limites,
+                    interacciones demas que se hacen en el proceso de recoleccón y asi identificar procesos que quiza se
+                    puedan optimizar. </p><br>
 
-                <li>Sector Secundario:</li>  
-                <p>Estos elementos del pensamiento computacional nos permite identificar el conjunto de tareas, recursos, interacciones a las que se somete una producción en especifico por lo que se desglosa en un paso a paso y a su vez facilita la planificacion para dicha tarea, establecer subprocesos, debido a que si omitimos un proceso el siguiente paso a dar se nos complicara o nos daría un error. Se aplica para determinar entradas y salidas en procesos de elaboracion sobre algun producto o actividad, ya que los procesos son un conjunto de actividades que se someten a una orden de producción.</p><br>
-            
-            <li>Sector Terciario:</li> 
-                <p>En este sector los elementos del pensamiento computacional se aplicaron segun el gusto, caracteristicas, significado y necesidades del cliente, como por ejemplo: El establecer un tipo de transporte cómodo y eficaz para la movilizacion en la ciudad, una red de telecomunicaciones, el beneficio que recibe el cliente es obtener señal para poderse comunicar. Estos elementos ayudan a definir diseños en los diferentes tipos de servicios que se venden, su uso y aplicabilidad. Tambien asi para identificar los limites, rangos que tienen los clientes para adquirir un servicio, evaluar escenarios, entre otros. <p><br>
-                    <p>Generalmente en el sector servicios es donde se generan los acuerdos comerciales más importantes, tanto a nivel nacional como internacional, en primer lugar esto implica subprocesos ya que dependen de otras areas para que estos servicios se puedan cumplir y brindar de una manera segura, como áreas de administración, recursos humanos, sector financiero, etc.</p>
+                <li>Sector Secundario:</li>
+                <p>Estos elementos del pensamiento computacional nos permite identificar el conjunto de tareas,
+                    recursos, interacciones a las que se somete una producción en especifico por lo que se desglosa en
+                    un paso a paso y a su vez facilita la planificacion para dicha tarea, establecer subprocesos, debido
+                    a que si omitimos un proceso el siguiente paso a dar se nos complicara o nos daría un error. Se
+                    aplica para determinar entradas y salidas en procesos de elaboracion sobre algun producto o
+                    actividad, ya que los procesos son un conjunto de actividades que se someten a una orden de
+                    producción.</p><br>
+
+                <li>Sector Terciario:</li>
+                <p>En este sector los elementos del pensamiento computacional se aplicaron segun el gusto,
+                    caracteristicas, significado y necesidades del cliente, como por ejemplo: El establecer un tipo de
+                    transporte cómodo y eficaz para la movilizacion en la ciudad, una red de telecomunicaciones, el
+                    beneficio que recibe el cliente es obtener señal para poderse comunicar. Estos elementos ayudan a
+                    definir diseños en los diferentes tipos de servicios que se venden, su uso y aplicabilidad. Tambien
+                    asi para identificar los limites, rangos que tienen los clientes para adquirir un servicio, evaluar
+                    escenarios, entre otros.
+                <p><br>
+                <p>Generalmente en el sector servicios es donde se generan los acuerdos comerciales más importantes,
+                    tanto a nivel nacional como internacional, en primer lugar esto implica subprocesos ya que dependen
+                    de otras areas para que estos servicios se puedan cumplir y brindar de una manera segura, como áreas
+                    de administración, recursos humanos, sector financiero, etc.</p>
             </ul>
             </ul>
         </div>
     </section>
-    
+
     <section class="about" id="about">
         <br>
         <br>
@@ -183,7 +211,12 @@
         <div class="content">
             <h2>Tercer Punto</h2>
             <h3>Descripcion de la operación (Crema dental en el cepillo):</h3>
-            <p>Primero se busca el cepillo y la crema dental en el baño donde comunmente se guardan estos elementos, una vez ubicados en el baño procederemos a localizar ambos elementos. Tomaremos primero el cepillo de dientes con la mano derecha y luego la crema dental con la mano izquierda, ya teniendo la crema dental con la mano izquierda apretaremos la crema dental de una forma leve para que pueda salir la pasta y asi poder echarle un poco al cepillo de dientes. Asi una vez desarrollodo estos pasos previos, ya con la crema dental en el cepillo puesto iniciaremos a cepillarnos los dientes</p>
+            <p>Primero se busca el cepillo y la crema dental en el baño donde comunmente se guardan estos elementos, una
+                vez ubicados en el baño procederemos a localizar ambos elementos. Tomaremos primero el cepillo de
+                dientes con la mano derecha y luego la crema dental con la mano izquierda, ya teniendo la crema dental
+                con la mano izquierda apretaremos la crema dental de una forma leve para que pueda salir la pasta y asi
+                poder echarle un poco al cepillo de dientes. Asi una vez desarrollodo estos pasos previos, ya con la
+                crema dental en el cepillo puesto iniciaremos a cepillarnos los dientes</p>
         </div>
     </section>
 
@@ -195,8 +228,12 @@
         <div class="content">
             <h2>Cuarto punto</h2>
             <br>
-            <p>Como ejemplo contamos con las 24 horas del día para realizar la actividad de "Cepillarnos los dientes", nuestra rutina es cepillarnos 4 veces al día y tenemos un tiempo programado para realizar la actividad de 3 minutos, pero se cronometro una vez para evaluar el tiempo que nos gastamos al cepillarnos los dientes y el tiempo real que nos tomaba esta actividad era de 5 minutos.</p>
-            <p>Usaremos el indicador de disponibilidad para calcular el tiempo disponible que tendremos durante el día para cumplir con las 4 cepilladas al día.</p>
+            <p>Como ejemplo contamos con las 24 horas del día para realizar la actividad de "Cepillarnos los dientes",
+                nuestra rutina es cepillarnos 4 veces al día y tenemos un tiempo programado para realizar la actividad
+                de 3 minutos, pero se cronometro una vez para evaluar el tiempo que nos gastamos al cepillarnos los
+                dientes y el tiempo real que nos tomaba esta actividad era de 5 minutos.</p>
+            <p>Usaremos el indicador de disponibilidad para calcular el tiempo disponible que tendremos durante el día
+                para cumplir con las 4 cepilladas al día.</p>
             <ul>
                 <li>D: Disponibilidad</li>
                 <li>TPP:Tiempo de producción programado</li>
@@ -212,6 +249,62 @@
             <br>
             <img src="assets/images/Formulas/3.png" alt="">
         </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section class="about" id="about">
+        <div class="content">
+            <h2 style="text-align:center;">Unidad 2</h2>
+
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="content">
+            <h2>Elementos necesarios para considerar en el diseño de un producto</h2>
+            <p>Primero se busca el cepillo y la crema dental en el baño donde comunmente se guardan estos elementos, una
+                vez ubicados en el baño procederemos a localizar ambos elementos. Tomaremos primero el cepillo de
+                dientes con la mano derecha y luego la crema dental con la mano izquierda, ya teniendo la crema dental
+                con la mano izquierda apretaremos la crema dental de una forma leve para que pueda salir la pasta y asi
+                poder echarle un poco al cepillo de dientes. Asi una vez desarrollodo estos pasos previos, ya con la
+                crema dental en el cepillo puesto iniciaremos a cepillarnos los dientes</p>
+                <br>
+                <br>
+                <br>
+                <h3>Elementos:</h3>
+                <ul>
+                    <li>Analisis de las necesidades: Implica un análisis que permite comprender las verdaderas necesidades del mercado y cómo ayuda el producto a solucionar sus problemas.</li>
+                    <br>
+                    <li>Concepto de producto: Se trata de generar una en idea por lo cual esta puede surgir después de un poco de observación, de lo que conoces de la competencia y los productos o servicios que utilizas en tu rutina diaria. </li>
+                    <br>
+                    <li>Partes: Ayuda a determinar las funciones y materiales, según a quien va dirigido.</li>
+                    <br>
+                    <li>Producción: Es el diseño preliminar del producto, mucho antes de que los clientes finales lo conozcan. El entorno en el que lo probarás es controlado, sencillamente es el momento en que tú y tu equipo, como creadores, van a revisar si la solución cumple con todo lo que planeaban</li>
+                    <br>
+                    <li>Distribución: Permite tomar mejores decisiones, desde la selección de materia prima por ejemplo, gracias a una etapa de pruebas que muestra errores u oportunidades antes de salir al mercado.
+                    </li>
+                </ul>
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="content">
+            <h2>Marketing Lateral</h2>
+            <p>La estrategia de marketing lateral busca en crear un producto o servicio totalmente distinto. De esta manera, en vez de aplicar estrategias de segmentación para tener cabida en un determinado nicho de mercado lo que hace es crear un mercado completamente nuevo y más amplio. La estrategia de marketing lateral puede ayudar a encontrar una alternativa viable de negocio a partir de una idea fresca y diferente sobre un producto o servicio que pueda convertirse en un objeto revolucionario que pueda suplir las ncecesidades requeridas demandadas por el mercado.</p>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
