--- a/pensamientoCompu.html
+++ b/pensamientoCompu.html
@@ -274,22 +274,41 @@
                 con la mano izquierda apretaremos la crema dental de una forma leve para que pueda salir la pasta y asi
                 poder echarle un poco al cepillo de dientes. Asi una vez desarrollodo estos pasos previos, ya con la
                 crema dental en el cepillo puesto iniciaremos a cepillarnos los dientes</p>
+            <br>
+            <br>
+            <br>
+            <h3>Elementos:</h3>
+            <ul>
+                <li>
+                    <h4>Analisis de las necesidades:</h4> Implica un análisis que permite comprender las verdaderas
+                    necesidades
+                    del mercado y cómo ayuda el producto a solucionar sus problemas.
+                </li>
                 <br>
+                <li>
+                    <h4>Concepto de producto:</h4> Se trata de generar una en idea por lo cual esta puede surgir después
+                    de un
+                    poco de observación, de lo que conoces de la competencia y los productos o servicios que utilizas en
+                    tu rutina diaria.
+                </li>
                 <br>
+                <li>
+                    <h4>Partes:</h4> Ayuda a determinar las funciones y materiales, según a quien va dirigido.
+                </li>
                 <br>
-                <h3>Elementos:</h3>
-                <ul>
-                    <li>Analisis de las necesidades: Implica un análisis que permite comprender las verdaderas necesidades del mercado y cómo ayuda el producto a solucionar sus problemas.</li>
-                    <br>
-                    <li>Concepto de producto: Se trata de generar una en idea por lo cual esta puede surgir después de un poco de observación, de lo que conoces de la competencia y los productos o servicios que utilizas en tu rutina diaria. </li>
-                    <br>
-                    <li>Partes: Ayuda a determinar las funciones y materiales, según a quien va dirigido.</li>
-                    <br>
-                    <li>Producción: Es el diseño preliminar del producto, mucho antes de que los clientes finales lo conozcan. El entorno en el que lo probarás es controlado, sencillamente es el momento en que tú y tu equipo, como creadores, van a revisar si la solución cumple con todo lo que planeaban</li>
-                    <br>
-                    <li>Distribución: Permite tomar mejores decisiones, desde la selección de materia prima por ejemplo, gracias a una etapa de pruebas que muestra errores u oportunidades antes de salir al mercado.
-                    </li>
-                </ul>
+                <li>
+                    <h4>Producción:</h4> Es el diseño preliminar del producto, mucho antes de que los clientes finales
+                    lo
+                    conozcan. El entorno en el que lo probarás es controlado, sencillamente es el momento en que tú y tu
+                    equipo, como creadores, van a revisar si la solución cumple con todo lo que planeaban
+                </li>
+                <br>
+                <li>
+                    <h4>Distribución:</h4> Permite tomar mejores decisiones, desde la selección de materia prima por
+                    ejemplo,
+                    gracias a una etapa de pruebas que muestra errores u oportunidades antes de salir al mercado.
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -300,7 +319,78 @@
         <br>
         <div class="content">
             <h2>Marketing Lateral</h2>
-            <p>La estrategia de marketing lateral busca en crear un producto o servicio totalmente distinto. De esta manera, en vez de aplicar estrategias de segmentación para tener cabida en un determinado nicho de mercado lo que hace es crear un mercado completamente nuevo y más amplio. La estrategia de marketing lateral puede ayudar a encontrar una alternativa viable de negocio a partir de una idea fresca y diferente sobre un producto o servicio que pueda convertirse en un objeto revolucionario que pueda suplir las ncecesidades requeridas demandadas por el mercado.</p>
+            <p>La estrategia de marketing lateral busca en crear un producto o servicio totalmente distinto. De esta
+                manera, en vez de aplicar estrategias de segmentación para tener cabida en un determinado nicho de
+                mercado lo que hace es crear un mercado completamente nuevo y más amplio. La estrategia de marketing
+                lateral puede ayudar a encontrar una alternativa viable de negocio a partir de una idea fresca y
+                diferente sobre un producto o servicio que pueda convertirse en un objeto revolucionario que pueda
+                suplir las ncecesidades requeridas demandadas por el mercado.</p>
+            <br>
+            <br>
+            <h3>Elementos marketing lateral</h3>
+            <br>
+            <ul>
+                <li>
+                    <p><strong>Sustitución:</strong> Se basa en modificar radicalmente las características de un producto, su entorno productivo o los usuarios a los que se destina</p>
+                </li>
+                <br>
+                <li>
+                    <p><strong>Inversión:</strong> ¿Cómo darle la vuelta a las características de un producto para mejorarlo?</p>
+                </li>
+                <br>
+                <li>
+                   <p><strong> Combinación:</strong> Se trata de combinar diferentes conceptos, productos o estrategias con el objetivo de crear algo totalmente novedoso.</p>
+                </li>
+                <br>
+                <li>
+                    <p><strong>Exageración:</strong> Es una técnica que consiste en exagerar las características de un producto hasta el punto de convertirlo en algo radicalmente diferente.</p>
+                </li>
+                <br>
+                <li>
+                    <p><strong>Eliminación:</strong> ¿Qué elementos o características se pueden eliminar de un producto o servicio sin que afecte negativamente a su calidad? O más aún, ¿qué se puede quitar del producto para llegar a nuevos clientes y potenciar la oferta?</p>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <br>
+        <br>
+        <br>
+        <div class="content">
+            <h2>¿Como aplicar el Marketing Lateral?</h2>
+            <p>El marketing lateral se basa en tres fases, las cuales serian las siguientes:.</p>
+            <br>
+            <br>
+            <ul>
+                <li>
+                    <h4>Seleccionar un foco</h4>
+                </li>
+                <br>
+                <li>
+                    <h4>Realizar un desplazamiento lateral</h4>
+                </li>
+                <br>
+                <li>
+                    <h4>Conexión</h4>
+                </li>
+                <br>
+                <br>
+                <h2>Ejemplo para aplicar el marketing lateral:</h2>
+                <br>
+                <li>
+                    <p><strong>Foco:</strong> Una flor</p>
+                </li>
+                <br>
+                <li>
+                    <p><strong>Desplazamiento Lateral:</strong> Que no se marchite</p>
+                </li>
+                <br>
+                <li>
+                    <p><strong>Conexión:</strong> Que no se marchite</p>
+                </li>
+            </ul>
 
         </div>
     </section>
