--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>IUPB 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by Juan R</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Pensamiento Computacional</a>
+                        <a class="main-heading">Pensamiento Computacional</a>
                         <p>Es más que una habilidad para resolver problemas, en muchos contextos puede ser útil personal y profesionalmente, por ello es una aptitud necesaria de desarrollar para cualquier persona.
                         </p>    
                         <a href="pensamientoCompu.html" class="btn">read more <i class="fas fa-arrow-right"></i></a>
@@ -219,11 +219,11 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>IUPB 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by Juan R</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Learn Web Development As A Beginner</a>
+                        <a class="main-heading">Learn Web Development As A Beginner</a>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Nam possimus modi.
                         </p>    
-                        <a href="#" class="btn">read more <i class="fas fa-arrow-right"></i></a>
+                        <a href="desarrolloDeLaCreatividad.html" class="btn">read more <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
 
