--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="box-container">
 
-            <div class="image">
+            <div class="image2">
                 <img src="assets/images/About/About-Image.png" alt="About-Image" />
             </div>
     
